# sharethis

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  justfile  mprocs.yaml  package-lock.json  package.json  uno.config.js  vite.config.js
.sqlx/: query-485baa2953cbf8666465f14595fd655a9d96d5d9d6a33e1c1d1ae1cc25509971.json  query-be8b2b62c71ab073c39e1094652c5d64c65053b8106f4c4c038614f851411bbd.json
migrations/: 20241222115056_init.sql
src/: main.rs  templates.rs  vite.rs  websocket.rs
src/js/: index.js  room.js
src/js/utils/: theme.js
src/styles/: editor.css
templates/: index.html  room.html
